--- a/scripts/style.css
+++ b/scripts/style.css
@@ -35,7 +35,7 @@
      overflow: visible;
      background-size: cover;
      background-repeat: no-repeat;
-     background-position: center right;
+     background-position: center center;
      /*table-layout:fixed;*/
  }
 
