--- a/scripts/style.css
+++ b/scripts/style.css
@@ -17,12 +17,13 @@
  
  
     
- @media(min-width:768px)
- {
+ 
 
  
  * html #wowslider-container1{ width:1000px }
- }
+ @media(min-width:768px){
+
+ 
  #wowslider-container1 .ws_images ul{
      position:relative;
      width: 10000%; 
@@ -38,7 +39,7 @@
      background-position: center center;
      /*table-layout:fixed;*/
  }
-
+ }
  #wowslider-container1 .ws_images ul li{
      width:1%;
      line-height:0; /*opera*/
