--- a/scripts/style.css
+++ b/scripts/style.css
@@ -7,7 +7,7 @@
 .contenedor-slaider{
     margin: 0 auto;
     max-width: 1200px;
-    width: 95%;
+    max-width: 95%;
 }
  
     #wowslider-container1 { 
