--- a/scripts/style.css
+++ b/scripts/style.css
@@ -10,7 +10,7 @@
     #wowslider-container1 { 
         zoom: 0; 
         position: relative; 
-        max-width:800px;
+        max-width:1200px;
         width: 95%;
         margin:0px auto 0px;
         z-index:90;
@@ -20,6 +20,17 @@
  }
     
  
+ #wowslider-container1 { 
+    zoom: 0; 
+    position: relative; 
+    max-width:800px;
+    width: 95%;
+    margin:0px auto 0px;
+    z-index:90;
+    border:1px solid #3399FF;
+    text-align:right; /* reset align=center */
+}
+}
 
     
  
