--- a/scripts/style.css
+++ b/scripts/style.css
@@ -5,7 +5,7 @@
  @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext");
  
 
- @media(min-width:768px)
+ @media(max-width:768px)
  {
     #wowslider-container1 { 
         zoom: 0; 
