--- a/scripts/style.css
+++ b/scripts/style.css
@@ -5,19 +5,7 @@
  @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext");
  
 
- @media(max-width:768px)
- {
-    #wowslider-container1 { 
-        zoom: 0; 
-        position: relative; 
-        max-width:1400px;
-        width: 95%;
-        margin:0px auto 0px;
-        z-index:90;
-        border:1px solid #3399FF;
-        text-align:right; /* reset align=center */
-    }
- }
+ 
     
  
  #wowslider-container1 { 
@@ -30,7 +18,7 @@
     border:1px solid #3399FF;
     text-align:right; /* reset align=center */
 }
-}
+
 
     
  
@@ -39,7 +27,7 @@
  * html #wowslider-container1{ width: 1000px; }
  
 
- @media(max-width:768px){
+ @media(min-width:768px){
 
  
  #wowslider-container1 .ws_images ul{
