--- a/scripts/style.css
+++ b/scripts/style.css
@@ -5,7 +5,6 @@
  @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext");
  
 
- 
     
  
  #wowslider-container1 { 
@@ -14,17 +13,19 @@
     max-width:800px;
     width: 95%;
     margin:0px auto 0px;
-    z-index:90;
+    z-index:95;
     border:1px solid #3399FF;
-    text-align:right; /* reset align=center */
+    text-align:center; /* reset align=center */
 }
 
 
     
  
 
- 
- * html #wowslider-container1{ width: 1000px; }
+ @media(min-width:768px){
+    * html #wowslider-container1{ width: 1200px; }
+ }
+
  
 
  
