--- a/scripts/style.css
+++ b/scripts/style.css
@@ -25,7 +25,7 @@
  
     * html #wowslider-container1{ 
         width: 1200px; 
-        margin: 0 auto;
+        margin-right: 0;
         width: 95%;
      }
  
