--- a/scripts/style.css
+++ b/scripts/style.css
@@ -23,11 +23,7 @@
  
 
  
-    * html #wowslider-container1{ 
-        width: 1600px; 
-        margin-right: 0;
-        width: 95%;
-     }
+    * html #wowslider-container1{ width: 1200px; }
  
 
  
