--- a/style.css
+++ b/style.css
@@ -203,6 +203,19 @@ transition: all .3s;
   gap: 4rem;
   
 }
+.barra-slaider{
+  display:flex;
+  align-items: center;
+  justify-content:center;
+ 
+}
+@media(min-width:768px){
+  .barra-slaider{
+    display: flex;
+   align-items:right;
+   gap: 1rem;
+  }
+}
 @media(min-width:768px){
   .barra{
     display: flex;
