--- a/style.css
+++ b/style.css
@@ -218,7 +218,13 @@ transition: all .3s;
    gap: 1rem;
   }
 }
-
+@media(min-width:768px){
+  .sobre-nosotros{
+      display: grid;
+      grid-template-columns: 2fr;
+     
+  }
+}
 .barra__imagen{
   margin-right: auto;
   margin-left: auto;
