--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ body{
   font-family: var(--fuenteParrafos);
   font-size: 1.6rem;
   line-height: 2;
+  overflow-x:hidden;
 }
 
 @media  (min-width:768) {
   body{
     font-size: 80%;
-    
+    overflow-x:hidden;
   }
   
 }
