--- a/style.css
+++ b/style.css
@@ -623,8 +623,10 @@ input[id="5"]:checked ~ .pagination .pagination-item[for="5"]{
 .entrada__torneos{
   position: relative;
   background: #dcdde4;
-  width: 30rem;
+  width: 36rem;
   height: 43rem;
+  margin-left: 0;
+  margin-right: 0;
   
 }
 .entrada__imagen-torneos{
@@ -688,7 +690,7 @@ input[id="5"]:checked ~ .pagination .pagination-item[for="5"]{
 }
 .torneos{
   line-height: 0%;
- margin-left: 0 auto;
+  padding-left: 10rem;
 }
 
 .widget-curso__label-primera{
@@ -787,7 +789,8 @@ li a{
   .contenedor-fechas{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    gap: 0rem;
+  
   }
 }
 
