--- a/style.css
+++ b/style.css
@@ -608,200 +608,138 @@ input[id="5"]:checked ~ .pagination .pagination-item[for="5"]{
 
 
 /**Aquí inicia la página Torneos**/
-                                          
+               /**Aqui inicia la pagina Torneos**/               
 
-.blog-torneos{
-  background-image: url(img/ujkuj.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin-bottom: 20rem;
-  padding: 1rem;
-  
-}
 
-.entrada__torneos{
-  position: relative;
-  background: #dcdde4;
-  width: 36rem;
-  height: 43rem;
-  margin-left: 0;
-  margin-right: 0;
-  
-}
-.entrada__imagen-torneos{
-  position: absolute;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 3rem;
-  padding-bottom: 4rem;
-}
-.entrada__torneos-texto{
-  text-align: center;
-  color:red;
-  border: 2px solid var(--blanco);
-  height: 3rem;
-  padding-bottom: 4px;
-  font-family:'Courier New';
-  font-size: 2rem;
-  font-weight: 700;
-}
-.entrada__torneos-heading{
-  padding-top: 1px;;
-}
 
-.entrada__torneos-informacion{
-  text-align: center;
-  color:red;
-  font-family:'Courier New';
-  font-size: 2rem;
-  font-weight: 700;
-  margin-top: 18rem;
-  margin-left: -8rem;
-  margin-right: 0;
-  width: 37rem;
- 
-}
-.entrada__torneos-fechas
-.cursos{
-  line-height: 1;
-  padding-bottom: 3rem;
-}
-.entrada__torneos-informacion h4{
-  font-size: 1rem;
-  color: red;
-}
-.widget-curso__label{
-  font-size: 1.5rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
-}
-.entrada__torneos-texto-enlaces{
-  text-align: center;
-  color:red;
-  height: 3rem;
-  padding:1px 3px;
-  font-family:'Courier New';
-  font-size: 2rem;
-  font-weight: 700;
-  padding-bottom: -2rem;
-}
-.torneos{
-  line-height: 0%;
-  padding-left: 10rem;
-}
+/**Aqui empieza las fechas de torneos**/
 
-.widget-curso__label-primera{
-  font-size: 1.5rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 0em;
-  margin-right: 1em;
-  padding-top: 5px;
-  letter-spacing: 1pt;
-  text-indent: 2pt;  
-}
-.widget-curso__label-segunda{
-  font-size: 1.5rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
-  padding-right: 1rem;
-  text-indent: 2pt;  
-}
-.widget-curso__label-tercera{
-  font-size: 1.5rem;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
-  letter-spacing: 1pt; 
-  text-indent: 2pt;        /* para sangrias */ 
-  
-}  
-.storneo-parrafos{
-  line-height: 0ex;
-}
-.widget-curso__info{
-  font-weight:bolder;
-  color: #000000;
-}
-.torneos-ligas{
-  padding-top: -5rem;
-}
-.entrada__torneos-texto-resultados{
-  font-size: 1.5rem;
-  color: red;
-  margin-top: -4rem;
-  text-align: center;
- 
-}
-.torneos-ligas{
-  margin-top: -7rem;
-}
-li a{
-  text-indent: 1pt;
-}
-.entrada__torneos-texto-informacion{
-  text-align: center;
-  color:red;
- font-size: 1.5rem;
- 
-}
-.entrada__torneos-fechas{
-  padding-top: 1rem;
-}
-.storneo-parrafos-fechas .separacion{
-  letter-spacing: 8pt;
-  color: darkred;
-  font-weight: bolder;
-}
-.storneo-parrafos-fechas p{
- 
-  color: darkred;
-  font-weight: bolder;
-}
-.entrada__torneos-fechas{
-  
-  color:red;
-  font-family:'Courier New';
-  font-size: 1.7rem;
-  font-weight: 700;
-  margin-top: -7rem;
-  margin-left: -5rem;
-  margin-right: 0;
-  width: 37rem;
-  word-spacing: 2pt;
-}
-.torneos-fechas{
-  margin-top:-4rem;
-  
-}
-.torneos-fechas a{
-  color: blue;
-  justify-content: center;
-  
-}
-@media(min-width:768px){
-  .contenedor-fechas{
+@media screen and (min-width:768px){
+  .contenido-principal-torneos{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0rem;
-  
+          grid-template-columns: repeat(5,1fr);
+          gap: 0rem;
+          
   }
 }
 
+.blog{
+  background-image: url(img/boliche\ luz7.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 60rem;
+}
+.entrada-principal-torneos{
+  background-color: rgb(196, 187, 187);
+  height: 55rem;
+  border: 1px solid white;
+}
+.entrada__heading{
+  border: 1px solid white;
+  padding: 1px 2px;
+}
+.entrada__heading h2{
+
+  text-align: center;
+  font-size: 2rem;
+  color: brown;
+}.entrada__imagen{
+  margin: 0 auto;
+}
+.entrada__imagen img{
+ 
+ padding: 2rem;
+ padding-right:4rem;
+ padding-left: 2rem;
+ height: 20rem;
+ max-width: 100%;
+ 
+}
+
+  .entrada__fechas{
+    position:relative;
+     font-size: 1.5rem;
+     color: rgb(165, 32, 32);
+     text-align: center;
+     max-width: 100%;
+     height: 12rem;
+     
+   }
+  
+@media(min-width:768px){
+  .cursos{
+   
+    text-align: center;
+    padding: 5px;
+    
+   
+  }
+
+}
+
+  .cursos{
+    margin-top:-10px;
+    text-align: center;
+    padding: -5px;
+    margin-right: 0%;
+    margin-left: 0%;
+   
+  }
 
 
+.widget-curso p{
+  margin: 0 auto;
+  line-height: 1pt;
+  font-size: 1.5rem;
+  color: brown;
+  font-weight: bold;
+  padding-right: 1rem;
+  padding-left: 2px;
+ 
+ 
+}
+.entrada__ligas{
+ margin: 0 auto;
+ padding: 0;
+ font-size: 1.5rem;
+ text-align: center;
+ color: brown;
+ font-weight: 700;
+ 
+}
+.widget-curso__info-1{
+  color: #000000;
+  padding-left:5rem;
+  margin: 0;
+ 
+}
+.widget-curso__info-2{
+  color: #000000;
+  padding-left:4rem;
+  margin: 0;
+ 
+}
+.widget-curso__info-3{
+  color: #000000;
+  padding-left:5rem;
+  margin: 0;
+ 
+}
+.container .default{
+  margin: 0 auto;
+ padding-right:2rem;
+ padding-left: 2rem;
+ height: 2rem;
+ max-width: 100%;
 
 
-
-
-
-
-
-
-
+}
+caption h3{
+  color: brown;
+  font-size: 1.5rem;
+}
+.default td{
+  letter-spacing: 3px;
+  color: darkcyan;
+}
