--- a/style.css
+++ b/style.css
@@ -19,27 +19,21 @@ body{
   font-family: var(--fuenteParrafos);
   font-size: 1.6rem;
   line-height: 2;
- 
- 
 }
-
-@media  (max-width:768) {
+@media  (min-width:768) {
   body{
     font-size: 80%;
-    
   }
   
 }
 
 /**Globales**/
-@media(max-width:768px){
   .contenedor{
-    max-width: 1200px;
+    max-width: 160rem;
     width: 95%;
     margin: 0 auto;
   }
 }
-
 a{
   text-decoration: none;
 }
@@ -139,19 +133,13 @@ ul li a {
 }
 /*Submenú*/
 
-.menu > li{
-  /* position: relative;*/
-  display: inline-block;
-  
- }
-@media (max-width:768px){
-  .menu > li{
-    /* position: relative;*/
-    display: block;
-    
-   }
-}
 
+
+.menu > li{
+ /* position: relative;*/
+ display: inline-block;
+ 
+}
 .menu > li > a{
   display: inline-block;
   padding: 15px 20px;
@@ -215,8 +203,6 @@ transition: all .3s;
   gap: 4rem;
   
 }
-
-
 @media(min-width:768px){
   .barra{
     display: flex;
@@ -276,19 +262,16 @@ transition: all .3s;
   
 }
 /**Barra de sucursales**/
-
-  .barra-sucursal{
-    background-color: #16181a;
-    text-align: center;
-    color: white;
-    padding-bottom: 20px;
-    padding-top: 10px;
-    font-size: 25px;
-    margin-top: auto;
-    
-  }
-
-
+.barra-sucursal{
+  background-color: #16181a;
+  text-align: center;
+  color: white;
+  padding-bottom: 20px;
+  padding-top: 10px;
+  font-size: 25px;
+  margin-top: auto;
+  
+}
 .sucursales{
   text-align: center;
   color: var(--blanco);
@@ -366,17 +349,8 @@ img{
     display: grid;
     grid-template-columns: 50% 50%;
     padding: auto;
-    height: 40rem;
-    
-  }
-}
-@media (min-width:768px){
-  .barra-video--primera{
-    display: grid;
-    grid-template-columns: 75%;
-    justify-content: center;
-    padding: auto;
     height: 34rem;
+    
   }
 }
 
@@ -384,6 +358,7 @@ img{
     float: left;
     padding: 1px;
     width: 90%;
+    height: 31rem;
     margin-top: 20px;
     margin-left: 10px;
     background-color:#000000;
@@ -429,12 +404,17 @@ img{
 }
 @media(min-width:768px){
   .entrada__imagen {
-    margin-left: 6rem;
-    margin-right: 0;
+    padding-left: 15rem;
+    
   }
   
 }
-
+.entrada__imagen img{
+  max-width: 100%;
+ 
+  margin: 0 auto;
+ 
+}
 /**Aqui termina el main**/
 
 
@@ -474,6 +454,7 @@ img{
   color: brown;
   margin-top: 4rem;
 }
+/**Aqui termina el mapa de navegación**/
 /**Aqui termina el mapa de navegación**/
 
 
@@ -623,7 +604,7 @@ input[id="5"]:checked ~ .pagination .pagination-item[for="5"]{
   }
 }
 
-.blog{
+.blog-torneos{
   background-image: url(img/boliche\ luz7.jpg);
   background-repeat: no-repeat;
   background-size: cover;
