--- a/style.css
+++ b/style.css
@@ -591,137 +591,92 @@ input[id="5"]:checked ~ .pagination .pagination-item[for="5"]{
 /**Aqui termina el wodslider**/
 
 
-/**Aqui empieza la página de torneos**/
 
-@media screen and (min-width:768px){
-  .contenido-principal-torneos{
-    display: grid;
-          grid-template-columns: repeat(5,1fr);
-          gap: 0rem;
-          
-  }
-}
-/**Aqui termina la página de torneos**/
 
 /**Aqui empieza las fechas de torneos**/
-@media screen and (min-width:768px){
-  .contenido-principal-torneos{
-    display: grid;
-          grid-template-columns: repeat(5,1fr);
-          gap: 0rem;
-          
-  }
-}
 
-.blog-torneos{
-  background-image: url(img/boliche\ luz7.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  height: 60rem;
-}
-.entrada-principal-torneos{
-  background-color: rgb(196, 187, 187);
-  height: 55rem;
-  border: 1px solid white;
-}
-.entrada__heading{
-  border: 1px solid white;
-  padding: 1px 2px;
-}
-.entrada__heading h2{
-
-  text-align: center;
-  font-size: 2rem;
-  color: brown;
-}.entrada__imagen{
-  margin: 0 auto;
-}
-
-
-  .entrada__fechas{
-    position:relative;
-     font-size: 1.5rem;
-     color: rgb(165, 32, 32);
-     text-align: center;
-     max-width: 100%;
-     height: 12rem;
-     
-   }
-  
 @media(min-width:768px){
-  .cursos{
-   
-    text-align: center;
-    padding: 5px;
-    
-   
+  .cuatro-columnas{
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
   }
-
+  .entrada__ligas{
+    flex: 00 calc(25%-1rem);
+    background-color: darkgrey;
+    height: 55rem;
+  }
 }
 
-  .cursos{
-    margin-top:-10px;
-    text-align: center;
-    padding: -5px;
-    margin-right: 0%;
-    margin-left: 0%;
-   
+.entrada__ligas h2{
+  font-size: 4rem;
+  text-align: center;
+  margin: 0% auto;
+  color: brown;
+  font-family: var(--fuenteLigas);
+}
+.entrada__ligas h3{
+  font-size: 4rem;
+  text-align: center;
+  margin: 0% auto;
+  color: brown;
+  font-family: var(--fuenteLigas);
+}
+.entrada__ligas h4{
+  font-size: 3rem;
+  text-align: center;
+  margin: 0% auto;
+  color: brown;
+  font-family: var(--fuenteLigas);
+}
+
+  .default{
+    margin-top: 1rem;
+    word-spacing: 3pt;
+    width: 30rem;
+    margin-left: 2rem;
   }
 
 
-.widget-curso p{
-  margin: 0 auto;
-  line-height: 1pt;
-  font-size: 1.5rem;
+p{
+  text-align: center;
+  line-height: 0px;;
+  padding-left: 2rem;
+  ;
+}
+
+.entrada__ligas-informacion1{
+  padding-left: 8rem;
+  font-weight: 700;
+  color: #000000;
+ 
+}
+.entrada__ligas-informacion2{
+  padding-left: 8rem;
+  font-weight: 700;
+  color: #000000;
+}
+.entrada__ligas-informacion3{
+  padding-left: 8rem;
+  font-weight: 700;
+  color: #000000;
+}
+.entrada__ligas-label{
+  color: brown;
+  font-family: var(--fuenteLigas);
+  font-size: 3rem;
+  font-weight: bold;
+}
+td{
+  line-height: 15pt;
+  font-family: var(--fuenteLigas);
+  font-size: 3rem;
+  color: darkcyan;
+  font-weight: bolder;
+}
+caption{
+  font-family: var(--fuenteLigas);
+  font-size: 3rem;
   color: brown;
   font-weight: bold;
-  padding-right: 1rem;
-  padding-left: 2px;
- 
- 
-}
-.entrada__ligas{
- margin: 0 auto;
- padding: 0;
- font-size: 1.5rem;
- text-align: center;
- color: brown;
- font-weight: 700;
- 
-}
-.widget-curso__info-1{
-  color: #000000;
-  padding-left:5rem;
-  margin: 0;
- 
-}
-.widget-curso__info-2{
-  color: #000000;
-  padding-left:4rem;
-  margin: 0;
- 
-}
-.widget-curso__info-3{
-  color: #000000;
-  padding-left:5rem;
-  margin: 0;
- 
-}
-.container .default{
-margin: 0 auto;
- padding-right: 0;
- padding-left: 0;
- height: 2rem;
- max-width: 100%;
-
-
-}
-caption h3{
-  color: brown;
-  font-size: 1.5rem;
-}
-.default td{
-  letter-spacing: 4px;
-  color: darkcyan;
 }
