--- a/style.css
+++ b/style.css
@@ -699,3 +699,63 @@ caption{
   color: brown;
   font-weight: bold;
 }
+/**Aqui termina las fechas de torneos**/
+
+
+/**Aqui inicia la página nosotros**/
+@media(min-width:768px){
+  .contenido-nosotros{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+  }
+}
+
+.entrada__nosotros{
+  padding-top: 3rem;
+}
+.imagen-nosotros1{
+  background-image: url(img/Imagen3-350x350.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 2rem;
+  height: 50rem;
+  width: 100%;
+ 
+}
+.imagen-nosotros2{
+  background-image: url(img/Imagen4-350x350.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: 2rem;
+  height: 50rem;
+  width: 100%;
+ 
+}
+.heading-nosotros1{
+  text-align: center;
+  font-size: 2.5rem;
+}
+.heading-nosotros2{
+  font-size: 1.5rem;
+  text-align: center;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+.nosotros-parrafo{
+  padding-left: 5rem;
+  text-align: center;
+}
+.nosotros-parrafo1{
+  padding-left: 5rem;
+  text-align: center;
+}
+.nosotros-parrafo2{
+  padding-left: 5rem;
+  text-align: center;
+}
+.nosotros-parrafo3{
+  padding-left: 5rem;
+  text-align: center;
+}
+/**Aqui termina la página nosotros**/
