--- a/style.css
+++ b/style.css
@@ -793,37 +793,8 @@ caption{
   
   }
 }
+
 .imagen-menu1{
-  background-image: url(img/IMG-20210915-WA0012.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin-top: 2rem;
-  height: 100rem; 
-  max-width: 100%;
- 
-}
-.imagen-menu2{
-  background-image: url(img/IMG-20210915-WA0013.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin-top: 2rem;
-  height: 100rem; 
-  max-width: 100%;
- 
-}
-.imagen-menu3{
-  background-image: url(img/IMG-20210915-WA0014.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin-top: 2rem;
-  height: 100rem; 
-  max-width: 100%;
- 
-}
-.imagen-menu4{
   background-image: url(img/IMG-20210915-WA0015.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -833,11 +804,41 @@ caption{
   max-width: 100%;
  
 }
+.imagen-menu2{
+  background-image: url(img/IMG-20210915-WA0017.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  margin-top: 2rem;
+  height: 100rem; 
+  max-width: 100%;
+ 
+}
+.imagen-menu3{
+  background-image: url(img/IMG-20210915-WA0012.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:  center;
+  margin-top: 2rem;
+  height: 100rem; 
+  max-width: 100%;
+ 
+}
+.imagen-menu4{
+  background-image: url(img/IMG-20210915-WA0014.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position:  center;
+  margin-top: 2rem;
+  height: 100rem; 
+  max-width: 100%;
+ 
+}
 .imagen-menu5{
   background-image: url(img/IMG-20210915-WA0016.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position:  center;
   margin-top: 2rem;
   height: 100rem; 
   max-width: 100%;
@@ -847,7 +848,7 @@ caption{
   background-image: url(img/IMG-20210915-WA0017.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position:  center;
   margin-top: 2rem;
   height: 100rem; 
   max-width: 100%;
@@ -860,8 +861,8 @@ caption{
 
 
 /**Aquí inicia la página academia**/
-@media(min-width:768px){
-  .blog-academia1{
+@media  (min-width:768px){
+.blog-academia1{
  display: grid;
  grid-template-columns: repeat(2,1fr);
   }
